# py_cpp

./: .hgignore  LICENSE.rst  MANIFEST.in  README.rst  bootstrap.py  buildout.cfg  setup.cfg  setup.py
app/: main.py  version.py
cpp/: conan.cmake  config.cmake
cpp/.cmake/: config.cmake  postbuild.cmake  pybind11.cmake  tests.cmake
cpp/app/: CMakeLists.txt  main.cpp
cpp/maths/: CMakeLists.txt  bindings.cpp  conanfile.txt  main.h
doc/: Doxyfile  conf.py  index.rst
doc/apidoc/: modules.rst
doc/apidoc/cpp/: modules.rst
doc/code/: modules.rst
doc/code/cpp/: modules.rst
doc/ext/apidoc/: __init__.py  builder.py  helpers.py  version.py
fab/: __init__.py  doc.py
py_cpp/: main.py  version.py
py_cpp/.cmake/: config.cmake  tests.cmake
py_cpp/maths/: CMakeLists.txt  tests.cpp
py_cpp/maths/src/: main.cpp  main.h
py_cpp/maths/tests/: test_main.cpp
py_cpp/ui/: frame.py  wxpy_cpp.fbp
tests/: conftest.py  test_cpp.py  test_main.py  test_maths.py
